--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -87,7 +87,7 @@
                     <p class="mt-5 MAIN-STUFF" id="section1">Implementation<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                       Triclocarban (TCC) concentration in sludge is relatively higher than in effluent, and this is difficult to degrade due to the compounds' chemical stability and high hydrophobicity. To combat this, our team has designed a packed bed bioreactor to be set up in the sludge treatment plant and efficiently degrade TCC into non-toxic compounds using our chassis.
-                      <br><br><br>
+                      <br><br>
                       Bioreactors are tanks where raw materials are converted into biochemical products using microbial, human, plant, or animal cells. Bioreactors create an environment that is suitable for the growth of the cells that are cultured within it. In wastewater treatment plants, bioreactors are designed to support an active biological climate that can help bacteria and protozoa survive. We have opted for a packed bed reactor as it helps establish better contact between the fluids and the solids. We have further ideated our bioreactor's packing material and other relevant parameters to ensure that TCC gets degraded into its non-toxic compounds.   
                       <br><br>
                       <p class="mt-5 MAIN-STUFF" id="section2">Bioreactor<br></p>
@@ -105,7 +105,7 @@
                       Suppose we were to implement our bioreactor in wastewater; the common suggestion is to go for a continuous flow bioreactor, as this allows better efficiency and higher amounts of water can be purified in a given time. However, that may be inefficient as our bacteria would require time to degrade the contaminants and hence require longer residence time in the continuous bioreactor. Hence, we decided to design a packed bed bioreactor with immobilized bacteria, with packing material as biochar, which will provide a nutritious environment for the growth of the bacteria, hence reducing the lag phases, provided TCC enters the cell by passive diffusion and, therefore gets broken down inside the cell.<br><br>
                       The concentration of  TCC in sludge (21000 ng/g dry weight) is significantly higher than in effluent (13000 ng/g dry weight) [2]. We decided to implement our sludge-based bioreactor when the sludge is in a liquid state (97-99% water content) before the drying and further treatment process to turn the liquid sludge into biosolids. We got this idea through one of our human practices visits to a wastewater treatment plant in West Bengal, India.  
                    </p>
-                   <br><br><br>
+                   <br><br>
                     <p class="mt-5 MAIN-STUFF" id="section3">Biochar<br></p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/locally-derived-biochar.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
                     <center><b>Fig 3:</b>Locally derived biochar from the burning of rice husk and is a waste product of rice mill industries</center>
@@ -131,7 +131,7 @@
                      <br>
                      Since a Raschig ring structure provides maximum surface area, we chose to use a Raschig ring made of biochar as our packing material (detailed below).  
                       </p>
-          <br><br><br><br>
+          <br><br>
            
                     <p class="mt-3 MAIN-STUFF" id="section4">Raschig ring<br></p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/raschig-ring.png" class="img-fluid rounded mx-auto d-block mt-4">
@@ -207,7 +207,7 @@
                    <center>Mechanism of our Single Packed Bed Bioreactor</center><br><br>
                     <p class="mt-3 MAIN-STUFF" id="section7">Cost Analysis<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"><b>Cost Analysis - Packed bed batch Bioreactor </b><br><br>
-                     <u><b> Design - batch packed bed reactor</b> [10,11]</u>
+                     <u><b> Design - batch packed bed reactor</b> [10,11]</u></p>
                     <ul style="font-family: 'Poppins', sans-serif; font-size: 20px;">
                       <li>Glass column</li>
                       <li>Pressure gauge</li>
@@ -256,10 +256,11 @@
                       </tr> 
                   </table>
                   <br>
+                  <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
                   *These prices are rough estimates referenced from the product market prices. We also expect an increase in the proposed rate with the addition of biochar pelleting, immobilization cost, and operating cost.
                   <br><br>
                   <b>Total cost - 18291(INR) </b><br>
-                  <b> Total cost - 219.77 (Dollars) as of 10/10/2023 </b>
+                  <b> Total cost - 219.77 (Dollars) as of 10/10/2023 </b></p>
 
      
                    </p>
@@ -308,11 +309,11 @@ Our ultimate goal is to establish ourselves as a standard and set a new practice
                         <center>Toggling Mechanism with Biochar Regeneration</center><br><br>
                         <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
                         <b>Time (T)=0 to T=2</b> days: Sludge from the wastewater treatment plant is continuously fed into the sludge tank starting at <b>T=0</b> days. It should be able to hold 2 days' worth of sludge, hence it fills completely at <b>T=2</b> days.
-<br><br><br>
+<br><br>
 <b>T=2 to T=4 days</b>: Once the right-hand side bioreactor fills up with the sludge, it remains in the tank and reacts with the immobilized bacteria within the reactor for two days. After two days, it leaves the bioreactor. While one reactor discharges, the sludge tank continues to fill up in the meantime <b>T=2 to T=4 </b>days.
-<br><br><br>
+<br><br>
 <b>T=4 to T=6</b> days: As the left-side bioreactor gets filled by the sludge from the sludge tank, the sludge will remain within  that reactor for 2 days and react with the immobilized bacteria (TCC goes inside the cell to get degraded by passive diffusion). The right-hand side bioreactor will now undergo a regeneration process, which will take a day or less than that.<br><br> The n-hexane will be released into the bioreactor, which will coat all the packing material, desorbing the contaminants that weren't degraded by our bacteria and releasing them into a side compartment where water will be present. This water + n-hexane + contaminants inside the side compartment can be heated to 70°C by a heating coil thus n-hexane starts boiling as the boiling point of n-hexane is 69°C, and pure hexane vapors get released, which gets collected in the small compartment above and condenses (since temperature there is much lower than 70°C) and can be used again and again at the end of each batch process after  the discharge of the sludge from that bioreactor. The compartment with the water and left behind contaminants can be released back into the bioreactor at the start of the following batch process which gives the water + contaminants enough time to cool down from 70°C to normal temperatures before the start of the next batch process. When this water + contaminants goes inside the bioreactor along with the next batch process, fresh water will be supplied in that compartment to maintain the water volume for the next regeneration process. This cycle also continues with the left-hand side bioreactor and regeneration after every degradation cycle. This regeneration process ensures that the active sites on the biochar after every batch process is not filled with other contaminants and hence ensures that the pores of the biochar are not clogged for the next batch process.
-<br><br><br>
+<br><br>
 
                          </p>
                          <br>
@@ -322,7 +323,8 @@ Our ultimate goal is to establish ourselves as a standard and set a new practice
     <br><br>
 
         The "Light-Induced Kill Switch" entails the use of a specific wavelength of light as the trigger for bacterial containment. The system relies on genetically engineered photoreceptors that respond to this light signal, which, when interrupted, leads to a chain of events resulting in cell death [16][17][18].
-
+<img src="https://static.igem.wiki/teams/4641/wiki/implementation/killswitch.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+<center>Graphical Respresentation of the Kill Switch</center><br><br>
         <br><br>
     We are building upon the kill switch designed by <b>iGEM USTC, NEU-China and Unesp_Brazil</b> [19][20][21]. The implementation of the project proposed by iGEM USTC was also done in wastewater treatment plants. By installing a blue light emitting device post our designed bioreactor, the process of our biocontainment becomes inexpensive and easier to control. We will be utilizing the two dimerized Photoreceptor VVDs and the linker molecule submitted by  iGEM USTC to the iGEM parts registry. </p>
         <br>
