added success to the nav bar.html

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -7,7 +7,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home" />
       </svg>
-      Module 0
+      Success
     </a>
   </li>
   <li>
@@ -15,7 +15,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#speedometer2" />
       </svg>
-      Module 1
+      Module 0
     </a>
   </li>
   <li>
@@ -23,13 +23,21 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#table" />
       </svg>
-      Module 2
+      Module 1
     </a>
   </li>
   <li>
     <a href="#section4" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#table" />
+      </svg>
+      Module 2
+    </a>
+  </li>
+  <li>
+    <a href="#section5" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#grid" />
       </svg>
       Module 3
     </a>
