--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -80,16 +80,20 @@
                 <div class="m-5 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1">1. iGEM ABOA, Turku, Finland (May 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">iGEM season ropes in several important days that have contributed towards the well- being of our planet. World Environment Day (June 5) is a good day to be reminded of what the Earth is enduring and to always be showing our support. MIT-MAHE participated in a collaborative mission, initiated by ABOA where we fashioned a “Let us Save Our Planet From TCC” poster which portrayed our mission while aligning with the Environment Day spirit. </p>
-                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-aboa.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <iframe title="MIT-MAHE: ABOA Collaboration (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/6d0638ef-204a-4426-8b8e-96b0d63e7313" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+                    <p class="sub-stuff" style="text-align:center;"><i>Video made for World Environment Day in collaboration with iGEM ABOA</i></p>
                     <p class="mt-5 MAIN-STUFF" id="section2">2. Maastricht iGEM, MSP Maastricht, Maastricht, Netherlands (June 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Working on a project is a long process. It requires dedication and hard work that needs to be put in and also comes with a sense of pride. However throughout this process, it can also be very easy to lose light of our initial mission and get demotivated. One thing that reminds us of how fun our work actually is, is music. MSP Maastricht brought together teams from all across the world to build a musical playlist that made everyday lab seem more like a party and less like work. It helped our team raise morale and meet our deadlines more efficiently while being less stressed. Listening to what different teams love to listen plays an imperative role in soothing our nerves and carrying the project forward.</p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/maastricht.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <p class="sub-stuff" style="text-align:center;"><i>Playlist made by iGEM Maastricht as a collaborative effort with other teams</i></p>
                     <p class="mt-3 MAIN-STUFF" id="section3">3. Penn State iGEM, Pennsylvania State University, Pennsylvania, USA (July 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The iGEM team from Penn State involved creating a diverse puzzle and gave us a platform to show off our creativity and identity. MIT-MAHE contributed to this global puzzle by sending in the project logo curated by our Graphics team which highlights our creative thinking and resembles our mission. It brings together diverse teams from all over the globe who aim at achieving one common goal- application of synthetic biology to find sustainable solutions to various problems around the world.</p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-fluid rounded mx-auto d-block mt-4">
+                    <p class="sub-stuff" style="text-align:center;"><i>Project CarbanEl logo—Sent to the iGEM team of Penn State as an effort to create a diverse global puzzle</i></p>
                     <p class="mt-3 MAIN-STUFF" id="section4">4. iGEM McGill, McGill University, Montreal, Quebec, Canada (July 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The McGill iGEM team came up with the idea of a Biome Book to document and showcase different proteins that were special to different teams. MIT-MAHE took part in this collaboration and sent in our novel amidase from <i>Ochrobactrum sp TccA</i>, which is our special protein. This interesting collaboration gave us the opportunity to broaden our horizons to the proteins that different teams are engineering and to recite to other teams our protein and its story!</p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/mcgill.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p class="sub-stuff" style="text-align:center;">Novel TccA amidase enzyme from Ochrobactrum sp.TCC-2</i></p>
                     <p class="mt-3 MAIN-STUFF" id="section5">5. iGEM IISER Bhopal, IISER Bhopal, Bhopal, Madhya Pradesh, India (July 2023) <br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> All India iGEM Meet (AIIM) is the event that hosts all Indian iGEM teams for a meetup and a smaller scale experience of the Grand Jamboree. It helped us understand how our ideas are flowing and to interact with various teams and get to learn their thought processes. MIT-MAHE got the opportunity to contribute towards this event through social media campaigning and graphics. To be able to curate these on a nation-wide scale was wonderful and helped our team to get a chance to enjoy the experience closely and also show off our creative skills. </p>
                     <div class="container">
@@ -99,12 +103,14 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iiser-bhopal-1.png" class="img-fluid mt-4" alt="Image 2">
+                          <p class="sub-stuff" style="text-align:center;">AIIM posters designed by the graphics team of iGEM MIT-MAHE</i></p>
                         </div>
                       </div>
                     </div>
                     <p class="mt-3 MAIN-STUFF" id="section6">6. iGEM NTHU, NTHU, Taiwan (August 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The iGEM map collaboration initiated by NTHU Taiwan allowed the personification of our projects- a unique perspective that draws the parallel between the various components that can be viewed as imperative characters in our story- our project. MIT-MAHE chose to present CarbanEl, our main solution enzyme as the character for the map- the hero of our story. The map lets the teams find out about other teams’ projects while telling a story about their own projects- using the logos and other parts as metaphors. </p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p class="sub-stuff" style="text-align:center;">Project CarbanEl logo—Sent to the iGEM NTHU team as the character for the map</i></p>
                     <p class="mt-3 MAIN-STUFF" id="section7">7. OUC-China, Ocean University of China, China (August 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> It is always important to be more inclusive towards the society and contribute towards this cause- the collaboration opportunity instituted by OUC China gave us the chance to help incorporate the spark of our project within the hearts of autistic children by compiling coloring sheets related to the projects of different teams.</p>
                     <div class="ratio ratio-16x9 mt-5">
@@ -112,8 +118,9 @@
                     </div>
                     <p class="mt-3 MAIN-STUFF" id="section8">8. iGEM IIT-Delhi, Indian Institute of Technology, Delhi, India<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The collaboration with iGEM IIT-Delhi was really special to us. Getting a chance to collaborate with a team working on a similar project and learning more about it was such an amazing experience. Together, we hosted a 3-day “Bioremediation Conclave” and a “BioArt Competition” open to the community and iGEM teams from all over the globe. The efforts that went behind the planning and organization of these events, frequent meetings and documentation by both the teams and finally, the day of the events were commendable!</p>
-                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-3.png" class="img-responsive rounded mx-auto d-block mt-4">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-4.png" class="img-responsive rounded mx-auto d-block mt-4">
+                    <p class="sub-stuff" style="text-align:center;">Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave</i></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-2"> <i>Bioremediation Conclave</i> </p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The “Bioremediation Conclave” had speakers from various reputed institutions and start-ups in the field of bioremediation on the first two days, while the 3rd day was specially dedicated for iGEM teams to showcase their projects and get insights from the Chief Guest. The audience was really interactive with the speakers and teams, and that made these webinars all the more fun. The event was a great success and a learning experience like no other.  </p>
                     
@@ -135,6 +142,7 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-5.png" class="img-fluid mt-4" alt="Image 2">
+                          <p class="sub-stuff" style="text-align:center;">Posters for the Bioremediation Conclave designed by the graphics team of MIT-MAHE</i></p>
                         </div>
                       </div>
                     </div>
@@ -150,6 +158,7 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-2.png" class="img-fluid mt-4" alt="Image 2">
+                          <p class="sub-stuff" style="text-align:center;">Posters for the BioArt Competition publicity and results announcement</i></p>
                         </div>
                       </div>
                     </div>
@@ -163,6 +172,7 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-2.png" class="img-fluid mt-4" alt="Image 2" style="border: 3px solid #555">
+                          <p class="sub-stuff" style="text-align:center;"> Postcard designed by team MIT-MAHE</i></p>
                         </div>
                       </div>
                     </div>
