--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -2012,7 +2012,7 @@
                             </div>
                               </div>
                               <div class="content">
-  <p class="mt-5 MAIN-STUFF" id="section2"><b>Protocol of experiments</b></p>
+  <p class="mt-5 MAIN-STUFF" id="section2"><b>Troubleshooting</b></p>
 
                               <div class="ratio ratio-16x9">
                                 
