Update with kill switch

--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -194,10 +194,12 @@
       <li>Our novel amidase gene acts along with a cluster of native genes that degrade the compound till
         cis,cis-muconic acid which is then further taken into the Krebs' cycle.
       </li>
+      <li>Recognizing that our project involves genetically modified components that can have unintended consequences, especially   when released into the environment, we have modified a kill switch such that it can provide a gene knockout strategy through a CRISPR-Cas9 system in the presence of blue light. This will serve as one of the biocontainment strategies. To know more, click here.
+</li>
   </ul>
 
     <figure>
-      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><figcaption {font-family: "Poppins", sans-serif;}> Proposed degradation pathway</figcaption>
+      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><figcaption {font-family: "Poppins", sans-serif;}> <center>Proposed degradation pathway</figcaption></center>
     </figure>
     </p>
 
