--- a/wiki/pages/home.html
+++ b/wiki/pages/home.html
@@ -69,7 +69,7 @@
     <img opacity=0.2 src="https://static.igem.wiki/teams/4641/wiki/homepage/wave-3.png">
     <img src="https://static.igem.wiki/teams/4641/wiki/homepage/wave-4.png">
     <div class="card-content-4">
-      Triclocarban<br><br><br><br>threaten aquatic and crop life.
+      Triclocarban<br><br><br><br>threaten aquatic and crop life. [1]
     </div>
     <div class="card-content-3">
       one such contaminant, escapes <br>degradation in wastewater<br> treatment plants to
@@ -101,7 +101,7 @@
     <div class="card-content-6">
       <h2><b>OUR SOLUTION</b></h2>
       <p><br><br><br><br><b>CarbanEl</b> uses <b> TccA </b> amidase from Ochrobactrum sp. <b>TCC-2 degrades TCC</b> to
-        4-chloroaniline and 3,4-dichloroaniline.<br> The associated gene, tccA, is introduced into a <b>chassis</b>
+        4-chloroaniline and 3,4-dichloroaniline [2].<br> The associated gene, tccA, is introduced into a <b>chassis</b>
         which <b>naturally degrades</b> the chloroaniline <b>into non-toxic intermediates</b> of the Krebs cycle.</p>
     </div>
   </div>
