--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -174,7 +174,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <li>We also posted a “Series on Synthetic Biology Applications” which had three episodes highlighting the latest unique advancements in synthetic biology to spark curiosity in the minds of our fellow social media users.</li>
       </ul>
 
-      <img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
+      <img class="mt-5 img-fluid" style="scale:0.33;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
       <ul  style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
       <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
       </ul>
@@ -224,8 +224,10 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
 
 <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;" class="mt-5 sub-stuff">
-  <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.<br>
+  <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons.<br><br>
   <iframe title="MIT-MAHE: Music Composition of Amidase (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/59fd1533-80ac-4416-bb5c-2a6e73795c86" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+  <p class="sub-stuff">Music Composition of our TccA Amidase</p>
+  
   </li>
   <li>We hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving real-world problems using traditional, indigenous and folk art styles. This helped encourage our rich heritage and brought out the diversity among the nations. The participants showcased their bioart while also describing the thoughts behind their design.</li>
 </ul>
@@ -233,7 +235,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 <img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
 <figcaption style="text-align:center">BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
 <img class="img-fluid"  style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg">
-<figcaption style="text-align:center">Winner of BioArt Competition</figcaption>
+<figcaption style="text-align:center">Omkar Prabhu's Artwork: Winner of BioArt Competition</figcaption>
 
 </figure>
         </div>
