--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -199,7 +199,8 @@
   </ul>
 
     <figure>
-      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><figcaption {font-family: "Poppins", sans-serif;}> <center>Proposed degradation pathway</figcaption></center>
+      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><center><figcaption {font-family: "Poppins", sans-serif;}> <center>Proposed degradation pathway</figcaption>
+      </center>
     </figure>
     </p>
 
