--- a/wiki/pages/project-parts.html
+++ b/wiki/pages/project-parts.html
@@ -7,7 +7,7 @@
             <svg class="bi me-2" width="16" height="16">
                 <use xlink:href="#PARTS:BBa_K4641000" />
             </svg>
-            Overview
+            Overview: PARTS:BBa_K4641000
         </a>
     </li>
 </ul>
