--- a/wiki/pages/model.html
+++ b/wiki/pages/model.html
@@ -180,7 +180,7 @@ We modeled the protein production in <i> E.coli </i>. However, in the future, we
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
     <br>
     The catalytic triad comprises a group of three amino acids found in the active sites of some enzymes like hydrolase and transferase. The catalytic triad provides a model for the chemical features and the structural properties of the enzyme, which allows them to facilitate reactions. Through a literature survey, we found the catalytic triad of the amidase family to be Ser-Ser-Lys. To identify exactly which triad (Ser-Ser-Lys) of the amidase family was involved, we used multiple alignments to identify it. In our amidase enzyme, we identified six lysine residues, namely L43, L79, L193, L271, L281, and L471, in the protein structure, of which 4, namely L43, L271, L281, and L471, lie on the surface. Among the remaining two lysines, L193 resulted in the formation of the ser-ser-lys triad; as this particular triad is stretched over 300 amino acids, we decided to rule it out as it is improbable to be involved in the binding. The final lysine was L79, surrounded by four probable serine residues around which it forms a catalytic triad, stretching over 100 amino acids [1]. 
-    <br>
+    <br></p>
     <u><b>AlphaFold</b></u> [4,5]
     <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-2.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
     <center><b>Fig 2:</b> Model which was used for this (predicted by <b>AlphaFold</b>and present in <b>UniProt</b> [6]) </center>
@@ -197,8 +197,8 @@ We modeled the protein production in <i> E.coli </i>. However, in the future, we
         <center><b>Fig 6:</b>Results generated from the Ramachandran Plot (using <b>SWISS-MODEL</b> generated structure)</center>
         <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-7.png" class="img-fluid rounded mx-auto d-block mt-4">
         <center><Fig 7:</b>Results generated from the Ramachandran Plot (using <b>SWISS-MODEL</b>)</center>
-            <br>
-            <u>Conclusion:</u>
+            <br> <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+            <u>Conclusion:</u><br>
             We generated a Ramachandran plot for both the structures predicted by <b>AlphaFold</b> and <b>SWISS-MODEL</b>. The <b>AlphaFold</b> structure showed 93.5% residues in the favorable region, whereas the structure predicted using <b>SWISS-MODEL</b> showed 90% residues. Therefore, we chose the same because the <b>AlphaFold</b> predicted structure is more energetically favorable. 
             <br><br>
             Since the structure of our amidase enzyme isn't well studied, we used software to predict its structure and binding sites. Models predicted by different software like <b>SWISS-MODEL</b> showed 35.6% sequence identity with 6-aminohexanoate cyclic dimer hydrolase. The binding site of all models was predicted using <b>GRASP</b> [12].
@@ -206,13 +206,13 @@ We modeled the protein production in <i> E.coli </i>. However, in the future, we
             <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-8.png" class="img-fluid rounded mx-auto d-block mt-4"> 
             <center><b>Fig 8:</b> GRASP Results</center>
 </p>
-<br>
+<br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
 <b>GRASP</b> shows the amino acid residues that most probably form the binding pocket of the enzyme, out of which Ser 155 and Ser 179 showed 85% confidence scores showing that it interacts and Lys 79 with 59% confidence score showing it is not actively involved in bond cleavage but does help in stabilizing the interactions. The catalytic triad also shows a very high GC content, which is very common across all of the amidases having this triad. These glycines are also involved in stabilizing the structure. In the Ser-Ser-Lys catalytic triad, the lysine polarizes the serine in the middle, forming one strong hydrogen bond with the nucleophilic serine to activate it. Further, the lysine can stabilize the structure, which is crucial for its orientation inside the active site. 
-<br><br>
+<br><br></p>
 <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-9.jpeg" class="img-fluid rounded mx-auto d-block mt-4"> 
 <center><b>Fig 9:</b>Multiple Sequence alignment was done with <i>Ochrobactrum sp.</i> TCC-2 and other amidases.</center>
-<br>
-We used <b>Clustal Omega</b> [13] for multiple sequence alignment of p-nitro acetanilide hydrolase (Accession No. -K9NBS6),6-aminohexanoate-cyclic-dimer hydrolase(Acc No.-P13397), linuron hydrolase( AEO20132),omega-lactams(BAI44731) and our <i>Ochrobactrum sp.</i> TCC-2 amidase. After aligning our amidase with several other biochemically similar amidases, which also have the Ser-Ser-Lys catalytic triad, it was observed that our predicted triad residues perfectly align with all the other ones. This further validates the hypothesis that the catalytic triad was a major active site involved in the interaction between TCC and TccA amidase.
+<br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+We used <b>Clustal Omega</b> [13] for multiple sequence alignment of p-nitro acetanilide hydrolase (Accession No. -K9NBS6), 6-aminohexanoate-cyclic-dimer hydrolase (Acc No.-P13397), linuron hydrolase(AEO20132),omega-lactams(BAI44731) and our <i>Ochrobactrum sp.</i> TCC-2 amidase. After aligning our amidase with several other biochemically similar amidases, which also have the Ser-Ser-Lys catalytic triad, it was observed that our predicted triad residues perfectly align with all the other ones. This further validates the hypothesis that the catalytic triad was a major active site involved in the interaction between TCC and TccA amidase.
 <br><br>
 </p>   
 <p class="mt-5 MAIN-STUFF" id="section6"><br>Enzyme Efficiency</p>
@@ -289,9 +289,9 @@ We used <b>Clustal Omega</b> [13] for multiple sequence alignment of p-nitro ace
     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
     A web server <b>SeamDock</b> [16,17] as a confirmatory -
 Its docking protocol incorporates various powerful software tools, enhancing its capability for molecular docking simulations. These software tools include <b>Dock 6, AutoDock4, EADock, AutoDock Vina,</b> and<b> rDock.</b>
-<br>
+<br><br>
 Workflow/Procedure of <b>SeamDock</b>: To generate results, we provided input files containing our ligand(UniProt ID: A0A167MNS0) and receptor [18]  information to the system. Subsequently, we examined the output data and drew conclusions based on our analysis, as outlined in the study [19].
-<br>
+<br><br>
 Results: The binding affinity was -4.7 kcal/mol, and the TCC molecule was binding to the Ser-Ser-Lys catalytic triad, which proves that it could further act upon TCC to degrade it.
 <br>
 <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-13-a.jpeg" class="img-fluid rounded mx-auto d-block mt-4"> 
@@ -306,7 +306,7 @@ Results: The binding affinity was -4.7 kcal/mol, and the TCC molecule was bindin
 Linuron (3-(3,4-chlorophenyl)-1-methoxy-1-methylurea) is a phenyl urea herbicide that accumulates in the soil and controls the germination and new emergence of grasses and broad-leafed weeds. It inhibits the photosynthesis in plants. 
 <br><br>
 <b>Inference from the dock:</b>
-Delta G values between -5.6 and -6.7 point to stable interactions between the amidase and the linuron, possibly leading to product degradation. This research was performed to see whether the TccA amidase enzyme can break down additional substances that are ideally broken down by other amidases. Linuron is one of the numerous compounds an enzyme from the amidase family has degraded. Amidohydrolases break it down into the carcinogenic byproduct 3,4-DCA. This by-product is also a by-product of TCC being broken down by the enzyme TccA amidase. According to the BLAST results shown in <b>Fig. 11</b>, the TccA amidase enzyme shares roughly 50% identity with other amidase enzymes. Hence, it is safe to assume that it may also degrade other substances broken down by the enzymes in the amidase family.
+ΔG values between -5.6 and -6.7 point to stable interactions between the amidase and the linuron, possibly leading to product degradation. This research was performed to see whether the TccA amidase enzyme can break down additional substances that are ideally broken down by other amidases. Linuron is one of the numerous compounds an enzyme from the amidase family has degraded. Amidohydrolases break it down into the carcinogenic byproduct 3,4-DCA. This by-product is also a by-product of TCC being broken down by the enzyme TccA amidase. According to the BLAST results shown in <b>Fig. 11</b>, the TccA amidase enzyme shares roughly 50% identity with other amidase enzymes. Hence, it is safe to assume that it may also degrade other substances broken down by the enzymes in the amidase family.
 <br><br>
 <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-16.png" class="img-fluid rounded mx-auto d-block mt-4"> 
 <center><b>Fig.16:</b> <b>BLAST [21-28]</b> results of TccA amidase enzyme showing around 50% similarity with other amidase enzymes.</center>
@@ -326,7 +326,7 @@ A Molecular Dynamics Simulation (MDS) is a computational method used to simulate
 <br><br>
 <u><b>MDS Results of the docked structure of TccA amidase with TCC</b></u>
 Specifics-
-<ul>
+<ul style="font-family: 'Poppins', sans-serif; font-size: 20px;">
 <li>pH - 7</li>
 <li>Temperature - 37°C</li>
 <li>Ionized water</li>
@@ -398,13 +398,13 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
     <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/fig-23.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
 <center><b>Fig 23:</b> Degradation Pathway of <i>Acinetobacter Baylyi</i>GFJ2 [32]. </center>
 </p>
-    <br>
+    <br><p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
         The next steps for us would be to model the degradation pathway of the toxic by-products of TCC by our amidase. We would then put it inside our chassis and predict the concentration of the by-products as time goes by.
         <br>
         Enzyme kinetics governing the degradation pathway from TCC to nontoxic by-products inside our chassis <i>Acinetobacter baylyi</i>: 
         
         <b>Without product Inhibition</b>
-        Assumption taken here is the product formed doesn't have an inhibitory effect on the substrate. Hence the equations are formed without product inhibition.
+        Assumption taken here is the product formed doesn't have an inhibitory effect on the substrate. Hence the equations are formed without product inhibition. </p>
         <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/eqn-7.png" class="img-fluid rounded mx-auto d-block mt-4">
         <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/eqn-8.png" class="img-fluid rounded mx-auto d-block mt-4">
         <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/eqn-9.png" class="img-fluid rounded mx-auto d-block mt-4">
@@ -439,8 +439,8 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
 <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
    <br>
    Bioreactors are tanks where raw materials are converted into biochemical products using microbial, human, plant, or animal cells. In wastewater treatment plants, bioreactors are designed to support an active biological climate, which helps the bacteria and protozoa to survive. The bioreactor we are proposing is a packed bed model. We have opted for a packed bed reactor as it helps establish better contact between the fluids and the solids. To determine the kinetics of the bioreactor, we had to come up with equations that could help us calculate the kinetics. To break down the calculation into different parts, we had to understand the different stages of our final degradation. The 3 stages that lead to the degradation of TCC are as follows:<br>
-<ol>
-  <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+<ol style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+  
 <li>Growth of our chassis</li>
 <li>Adsorption of the TCC from sludge onto biochar, and then TCC goes into the cell by passive diffusion, given its hydrophobic nature,</li>
 <li>Degradation kinetics come into play. </li>
@@ -451,8 +451,8 @@ As shown in <b>Fig 21</b>, the radius of gyration (Rg) fluctuates between 2.15 a
 The bacteria uses TCC as a carbon source after the TccA amidase is introduced, and the bacteria itself breaks it down further into non-toxic byproducts.<br>
 Hence, we came to the conclusion to divide our design equation into the following three parts:<br>
 </p>
-<ol>
-  <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+<ol style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+  
 <li>Based on microbial growth.</li>
 <li>Based on the degradation kinetics of TCC.</li>
 <li>Based on the adsorption kinetics.</li>
@@ -474,11 +474,11 @@ The common assumption taken into consideration for determining kinetics is that 
   <br>
   <u><b>DESIGN EQUATION FOR THE GROWTH RATE:</b></u>
   <br>
-  <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/bioreactor-workflow.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
+
   <center><b>Number of cells versus time called the Bacterial Growth Curve</b></center></p>
    <br>
    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
-    <ol>
+    <ol style="font-family: 'Poppins', sans-serif; font-size: 20px;">
       <li>Lag Phase - No cell division takes place.
                          Change in the number of cells is 0.</li>
       <li>Exponential (Log)  phase- Cell division increases and then becomes constant.
@@ -492,14 +492,13 @@ The common assumption taken into consideration for determining kinetics is that 
         <b>DESIGN EQUATION</b>
         <br><br>
         The Monod kinetics equation is an empirical model suggested for the growth of microorganisms. It describes the complex process of development and biodegradation linked to growth involving multiple enzymes [3]. The Monod mathematical model is the most frequently and widely used method to describe the growth of microbes in pure and mixed cultures. Monod is used to model the growth of bacteria in the exponential (log) phase. In this phase, the bacteria divides rapidly and hence requires a lot of carbon sources, and TCC is actively used as a carbon source by our transformed bacteria.
-        <img src="https://static.igem.wiki/teams/4641/wiki/model-dl/bioreactor-workflow.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
       </p>
   </p>
   <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
-  <ul>
-    <li>μm - maximum specific growth rate</li>
+  <ul style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+    <li>μ<sub>m</sub> - maximum specific growth rate</li>
     <li>S - Concentration of the growth limiting factor or substrate</li>
-    <li>Ks - Half saturation constant </li>
+    <li>K<sub>s</sub> - Half saturation constant </li>
                </ul> 
               </p> 
                <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
