Education page div tag fix

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -1125,9 +1125,10 @@
               biology:<br>
             <ol>
               <li><u>Big Data Challenges in Genomics and Proteomics:</u> Explored the complexities of managing large
-                datasets, providing insights for researchers <a <div class="ratio ratio-16x9">
+                datasets, providing insights for researchers <div class="ratio ratio-16x9">
                   <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article4.pdf"
                     allowfullscreen></iframe>
+                </div>
           </div>
           </li>
           <li><u>The Power of POSH - Post Translation Switch:</u> Introduced the potential of POSH, showcasing
