--- a/wiki/my-footer.html
+++ b/wiki/my-footer.html
@@ -1,43 +1,49 @@
 <footer class="text-center text-white" style="background-color: #FFFFFF; bottom: 0; width: 100%;">
-    <!-- Grid container -->
-    
-    <!-- Grid container -->
-
-    <div class="image-container" style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/allegro.jpg" alt="Image 1" style="width:10%; height:auto">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/idt.jpg" alt="Image 2" style="width:10%; height:auto">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/mathworks.jpg" alt="Image 3" style="width:10%; height:auto">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/mit-mahe.jpg" alt="Image 4" style="width:10%; height:auto">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/snapgene.jpg" alt="Image 5" style="width:10%; height:auto">
-      <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/new-england-biolab.jpg" alt="Image 6" style="width:8%; height:auto">
-    </div>
-
-    <div class="container p-2">
-
-      <!-- Section: Social media -->
-      <section class="mb-2">
-    
-        <!-- Google -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="mailto: manipalbiomachines.igem@gmail.com" role="button"><i class="bi bi-envelope"></i></a>
-
-        <!-- Instagram -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/manipalbiomachines/" role="button"><i class="bi bi-instagram"></i></a>
-
-        <!-- Linkedin -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com/company/manipal-biomachines/" role="button"><i class="bi bi-linkedin"></i></a>
-        <!-- Github -->
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://gitlab.igem.org/2023/mit-mahe/-/blob/main/wiki/pages/engagement-collaborations.html?ref_type=heads" role="button"><i class="bi bi-github"></i></a>
-      </section>
-      <!-- Section: Social media -->
-    </div>
-  
-
-
+  <!-- Grid container -->
+  <div class="image-container"
+    style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/allegro.jpg" alt="Image 1"
+      style="width:10%; height:auto">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/idt.jpg" alt="Image 2"
+      style="width:10%; height:auto">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/mathworks.jpg" alt="Image 3"
+      style="width:10%; height:auto">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/mit-mahe.jpg" alt="Image 4"
+      style="width:10%; height:auto">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/snapgene.jpg" alt="Image 5"
+      style="width:10%; height:auto">
+    <img src="https://static.igem.wiki/teams/4641/wiki/sponsors/sponsors/new-england-biolab.jpg" alt="Image 6"
+      style="width:8%; height:auto">
   </div>
-    <!-- Copyright -->
-    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2023 - Content on this site is licensed under a Creative Commons Attribution 4.0 International license.
-    </div>
-    <!-- Copyright -->
 
-  </footer>
+  <div class="container p-2">
+
+    <!-- Section: Social media -->
+    <section class="mb-2">
+
+      <!-- Google -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39"
+        href="mailto: manipalbiomachines.igem@gmail.com" role="button"><i class="bi bi-envelope"></i></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac"
+        href="https://www.instagram.com/manipalbiomachines/" role="button"><i class="bi bi-instagram"></i></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca"
+        href="https://www.linkedin.com/company/manipal-biomachines/" role="button"><i class="bi bi-linkedin"></i></a>
+      <!-- Github -->
+      <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
+        href="https://gitlab.igem.org/2023/mit-mahe/-/blob/main/wiki/pages/engagement-collaborations.html?ref_type=heads"
+        role="button"><i class="bi bi-github"></i></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+
+  <!-- Copyright -->
+  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2023 - Content on this site is licensed under a Creative Commons Attribution 4.0 International license.
+  </div>
+  <!-- Copyright -->
+
+</footer>
